<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterPage">

    <TextView
        android:id="@+id/Register_Head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#39C5BB"
        android:gravity="center"
        android:text="@string/register_head"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Reg_Email_Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/reg_email_text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Reg_Email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#78909C"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Reg_Name_Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/reg_name_text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Reg_Name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_name"
                android:inputType="textPersonName"
                android:textColorHint="#78909C"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Reg_Pwd_Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/reg_pwd_text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Reg_Pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_pwd"
                android:inputType="textPassword"
                android:textColorHint="#78909C"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Reg_Pwd_Text2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/reg_pwd_text2"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Reg_Pwd2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_pwd2"
                android:inputType="textPassword"
                android:textColorHint="#78909C"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/Register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_btn" />
</LinearLayout>